2011-09-17  Jason Merrill  <jason@redhat.com>

	PR c++/50442
	Revert:
	PR c++/49267
	* call.c (compare_ics): rvaluedness_matches_p can differ
	based on the source type, not just target.

2011-09-16  Jason Merrill  <jason@redhat.com>

	PR c++/50424
	* tree.c (bot_manip): Set cp_function_chain->can_throw.

2011-09-13  Dodji Seketeli  <dodji@redhat.com>

	PR c++/48320
	* pt.c (template_parameter_pack_p):  Support TEMPLATE_PARM_INDEX
	nodes.  Add a comment.
	(arg_from_parm_pack_p): New static function, factorized out from
	tsubst_pack_expansion and extended to support non-type parameter
	packs represented with TEMPLATE_PARM_INDEX nodes.
	(tsubst_pack_expansion): Use arg_from_parm_pack_p.

2011-09-08  Jakub Jelinek  <jakub@redhat.com>

	PR c++/50255
	* method.c (use_thunk): If emitting thunk into the same section
	as function, use the same DECL_COMDAT_GROUP as well.

2011-09-07  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50309
	* decl.c (grokdeclarator): Check u.function.exception_specification
	for error_mark_node.

2011-09-04  Jason Merrill  <jason@redhat.com>

	PR c++/49267
	* call.c (compare_ics): rvaluedness_matches_p can differ
	based on the source type, not just target.

2011-08-29  Jakub Jelinek  <jakub@redhat.com>
	    Jason Merrill  <jason@redhat.com>

	PR c++/50207
	* class.c (finish_struct_1): Complain if the first field is
	artificial.

2011-08-30  Jason Merrill  <jason@redhat.com>

	PR c++/50089
	* semantics.c (finish_id_expression): Use
	current_nonlambda_class_type for qualified-ids.

	PR c++/50220
	* semantics.c (add_capture): Call complete_type for copy.

	PR c++/50234
	* semantics.c (cxx_eval_component_reference): Handle
	value-initialization for omitted initializers.

2011-08-29  Jason Merrill  <jason@redhat.com>

	PR c++/50224
	* semantics.c (finish_id_expression): Mark captured variables used.

2011-08-25  Jason Merrill  <jason@redhat.com>

	PR c++/50157
	* call.c (convert_like_real): Exit early if bad and !tf_error.
