@@ -1,3 +1,8 @@
+2011-09-22  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/50491
+	* semantics.c (potential_constant_expression_1): Handle USING_DECL.
+
 2011-09-17  Jason Merrill  <jason@redhat.com>
 
 	PR c++/50442
